flux/dmz/crowdsec/crowdsec-release.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: crowdsec
  labels:
    network-zone: dmz
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
